Fixed issue with scrollbar in docs '

--- a/static/docs/css/restbroker-docs.css
+++ b/static/docs/css/restbroker-docs.css
@@ -82,3 +82,8 @@ a {
 .resource-parameter-label {
     font-size: 15px;
 }
+
+html {
+    overflow: scroll;
+    overflow-y: hidden;
+}
